--- a/Breakout/index.html
+++ b/Breakout/index.html
@@ -19,6 +19,48 @@
 		var canvas = $('#canvas')[0];
 		// different browsers support different contexts. All support 2d
 		var context = canvas.getContext('2d');
+		
+		
+		//The Powers
+		powers = [];
+		
+		function Power(I){
+			I = I || {};
+			
+			locked = true;
+			
+			I.x = 0;
+			I.y = 0;
+			I.type = 'PLUS';
+			I.draw = function() {
+				context.arc(I.x, I.y, 15, 0, Math.PI * 2, true);
+			}
+			
+		}
+		
+		
+		
+		
+		function addPower(posx, posy, powertype) {
+			
+			powers.push(Power({
+				x: posx,
+				y: posy,
+				type: powertype
+				}));
+			
+			
+		}
+		
+		function drawPowers(){
+			//powers.forEach(function(power) {
+			//	power.draw();
+			//});
+		}
+		
+		
+		
+		
 
 		// The PADDLE
 		var paddleX = 200;
@@ -252,6 +294,7 @@
 			
 			
 			createBricks();
+			drawPowers();
 			displayScoreBoard();
 			movePaddle();
 			moveBall();
@@ -270,6 +313,7 @@
 			paddleMove = 'NONE';
 			paddleDeltaX = 0;
 			gameloop = setInterval(animate,1000/60);
+			addPower(15,15,'PLUS');
 			
 			
 				
