Camera pan & zoom and mashup of jumper and map parser CD needs serious work

--- a/tests/jumper.html
+++ b/tests/jumper.html
@@ -14,10 +14,11 @@
     <script type="text/javascript" src="engine.js"></script>
     <script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="jumper.js"></script>
+    <script type="text/javascript" src="parser.js"></script>
   </head>
   <body>
 
-    <canvas id="myCanvas" width="800" height="600" tabindex="1"></canvas>
+    <canvas id="myCanvas" width="640" height="480" tabindex="1"></canvas>
 
   </body>
 </html>
