--- a/tests/jumper.html
+++ b/tests/jumper.html
@@ -16,9 +16,7 @@
     <script type="text/javascript" src="jumper.js"></script>
     <script type="text/javascript" src="parser.js"></script>
   </head>
-  <body>
-
-    <canvas id="myCanvas" width="640" height="480" tabindex="1"></canvas>
+  <body onload="initialize()">
 
   </body>
 </html>
