--- a/Engine/index.html
+++ b/Engine/index.html
@@ -11,10 +11,8 @@
       }
     </style>
     <script type="text/javascript" src="jquery.min.js"></script>
-    <script type="text/javascript" src="engine.js"></script>
-    <script type="text/javascript" src="utils.js"></script>
-    <script type="text/javascript" src="jumper.js"></script>
-    <script type="text/javascript" src="parser.js"></script>
+    <script type="text/javascript" src="director.js"></script>
+    <script type="text/javascript" src="keymap.js"></script>
   </head>
   <body onload="initialize()">
 
