--- a/Engine/index.html
+++ b/Engine/index.html
@@ -10,9 +10,15 @@
         border: 1px solid #9C9898;
       }
     </style>
+    
     <script type="text/javascript" src="jquery.min.js"></script>
-    <script type="text/javascript" src="director.js"></script>
+    <script type="text/javascript" src="require.js"></script>
+    <script type="text/javascript" src="compmanager.js"></script>
+    <script type="text/javascript" src="render.js"></script>
+    <script type="text/javascript" src="movement.js"></script>
+    <script type="text/javascript" src="player.js"></script>
     <script type="text/javascript" src="keymap.js"></script>
+    <script type="text/javascript" src="director.js"></script>
   </head>
   <body onload="initialize()">
 
