Unitary tests trying to get the fucking requirejs to work...

--- a/Engine/test/core.html
+++ b/Engine/test/core.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<script type="text/javascript" src="../lib/require.js" data-main="../core"></script>
+	<script type="text/javascript" src="../lib/require.js" data-main="../build/core-built"></script>
 </head>
 <body>
 </body>
